...
                                child: const Text("No")),
                            TextButton(
                                key: const Key("submitEvaluationYesTags"),
                                onPressed: () {
                                  Navigator.of(context).pop(true);
                                },
                                child: const Text("Yes"))
                          ]);
                    }) ??
                true;
          }
          if (!submitEvalWithTags) {
            return;
...
        // if success (try will catch the error and skip this section)
        if (mounted) {
          viewCompletedEval = await showDialog<bool>(
                context: context,
                builder: (final BuildContext context) {
                  return AlertDialog(
                    title: const Text('Evaluation Submission Received'),
                    content: Text(
                      'Evaluation successfully submitted for '
                      '${widget.patient.fName} ${widget.patient.lName}.\n'
                      'Would you like to view it?',
                    ),
                    actions: <Widget>[
...
                          // User cancels
                          Navigator.of(context).pop(false);
                        },
                        child: const Text('No'),
                      ),
                      TextButton(
                        key: const Key("submitEvaluationYes"),
                        onPressed: () {
                          Navigator.of(context).pop(true); // user confirms
                        },
                        child: const Text('Yes'),
                      ),
                    ],
...
          appBar: AppBar(
            backgroundColor: Theme.of(context).colorScheme.primary,
            actions: _formKey.currentState?.saveAndValidate() ?? false
                ? [
                    ElevatedButton(
                      onPressed: () => handleSubmission(_formKey.currentState),
                      child: const Text("Submit"),
                    )
                  ]
                : null,
            bottom: TabBar(
              controller: _tabController,
              tabs: createTabs(),
...
