...

class PatientList extends StatefulWidget {
  static const String RouteName = '/patients';

  const PatientList({super.key, this.showTutorial = false});

  static const String title = 'Patient List';
  final bool showTutorial;

  @override
  State<PatientList> createState() => _PatientListState();
}

...
                  context,
                  MaterialPageRoute(
                    builder: (final context) => const PatientAdditionFormPage(),
                  ),
                );
              },
              tooltip: 'Add a new patient',
              color: Colors.black,
            ),
          )
        ],
      ),
      drawer: const HippoAppDrawer(),
...
      // so i constructed a ternary to suit my needs.
      body: displayPatients.isNotEmpty
          ? PatientListCardWidget()
          : keepLoading
          ? const Center(child: CircularProgressIndicator())
          : const Center(
          child: Text("No patients found.",
              style: TextStyle(fontSize: 20, color: Colors.red))),
    );
  }

  /// Returns either the standard list card widget or
  /// a custom one for if in guest mode
...
